snapshots/syntax/library/statements/setattr/setattr_at_module_level.snap
---
source: src/syntax/library/statements/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetAttrStatement
      children:
        - kind: SetAttrKeyword
          text: SetAttr
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"C:\\File.txt\""
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: vbNormal
        - kind: Newline
          text: "\n"
