snapshots/syntax/library/statements/setattr/setattr_in_select_case.snap
---
source: src/syntax/library/statements/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: fileType
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SetAttrStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SetAttrKeyword
                      text: SetAttr
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: filePath
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: vbReadOnly
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "2"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: SetAttrStatement
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: SetAttrKeyword
                      text: SetAttr
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: filePath
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: vbHidden
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
